@@ -1,39 +1,0 @@
-/*
-startubg multi line comment
-stil here
-end
-*/
-
-class File1 {
-
-	public int method1(int a, int b, (int 3 _ 2)){
-		int x = a + b;
-		return x * 3;
-		(abc))()();
-		{kajhfkj}
-		{{{adadf}}}
-	}
-
-	public void randomMethodVoid    (int a, int b)
-	{
-		//this comment
-		System.out.println("aaaa");
-	}
-
-	public String randomMethodStringReturn(int a, int b)   {
-		/* multi line coment
-		to include here */
-		int c = a + b;
-		return "222";
-	}
-
-	public void randomMethodVoid__2 (int a, int b)
-	{
-		System.out.println("222");
-	}
-
-
-
-// skip this line cos end of classwq
-
-}
