@@ -1,17 +1,0 @@
-// line1
-//line 2
-//line 3
-/* starting mul
-stil
-stil
-stil
-*/
-
-
-(some random stuff here)
-
-
-
-
-
-
