@@ -1,0 +1,35 @@
+public
+int
+mainClassMethod1
+()
+{}
+public
+void
+mainClassMethod2
+()
+{}
+public
+String
+randomMethodStringReturn
+()
+{}
+public
+void
+randomMethodVoid__2_
+()
+{}
+public
+int
+innerClassMethod1
+()
+{}
+public
+String
+innerClassMethod2
+()
+{}
+public
+boolean
+innerClassMethod3
+()
+{}
